--- a/MSDS_453_Term_Project/golf_course_reviews_scrapper.ipynb
+++ b/MSDS_453_Term_Project/golf_course_reviews_scrapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,7 @@
     "# Import the required libraries\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
     "\n",
     "# Define the URL\n",
     "url = 'https://golf.com/travel/courses/top-100-golf-courses-in-the-us-2022-23-ranking/'\n",
@@ -26,6 +27,403 @@
     "# Parse the HTML content\n",
     "soup = BeautifulSoup(response.text, 'html.parser')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the top 100 golf courses\n",
+    "course_items = soup.find_all('div', class_='top100-featured-item')\n",
+    "\n",
+    "# Loop through the first 30 golf courses and save the required information to a list\n",
+    "courses = []\n",
+    "\n",
+    "for item in course_items[:30]:\n",
+    "    rank = item.find('h3', class_='top100-featured-item__title').text.strip().split(\".\")[0]\n",
+    "    name = item.find('h3', class_='top100-featured-item__title').text.strip().split(\".\")[1].strip()\n",
+    "    location = item.find('div', class_='top100-featured-item__location').find_all('span')[1].text.strip()\n",
+    "    \n",
+    "    specs = item.find('div', class_='top100-featured-item__specs')\n",
+    "    architect = specs.find(\"div\", class_=\"top100-featured-item__spec-text\").text.strip()\n",
+    "    year_built = specs.find_all('div', class_='top100-featured-item__spec-text')[1].text.strip()\n",
+    "    \n",
+    "    courses.append({\n",
+    "        'rank': rank,\n",
+    "        'name': name,\n",
+    "        'location': location,\n",
+    "        'architect': architect,\n",
+    "        'year_built': year_built\n",
+    "    })\n",
+    "    \n",
+    "# Turn the list into a DataFrame\n",
+    "df = pd.DataFrame(courses)\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "df\n",
+    "\n",
+    "# Save the DataFrame to a CSV file\n",
+    "df.to_csv('top_30_courses.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rank</th>\n",
+       "      <th>name</th>\n",
+       "      <th>location</th>\n",
+       "      <th>architect</th>\n",
+       "      <th>year_built</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Pine Valley</td>\n",
+       "      <td>Pine Valley, NJ</td>\n",
+       "      <td>George Crump / Harry S. Colt</td>\n",
+       "      <td>1918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Cypress Point</td>\n",
+       "      <td>Pebble Beach, CA</td>\n",
+       "      <td>Alister MacKenzie</td>\n",
+       "      <td>1928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Shinnecock Hills</td>\n",
+       "      <td>Southampton, NY</td>\n",
+       "      <td>William Flynn</td>\n",
+       "      <td>1931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>National Golf Links of America</td>\n",
+       "      <td>Southampton, NY</td>\n",
+       "      <td>C.B. Macdonald</td>\n",
+       "      <td>1911</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Oakmont</td>\n",
+       "      <td>Oakmont, PA</td>\n",
+       "      <td>Henry Fownes</td>\n",
+       "      <td>1903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Sand Hills</td>\n",
+       "      <td>Mullen, NE</td>\n",
+       "      <td>Bill Coore/Ben Crenshaw</td>\n",
+       "      <td>1995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Augusta National</td>\n",
+       "      <td>Augusta, GA</td>\n",
+       "      <td>Alister MacKenzie/Bobby Jones</td>\n",
+       "      <td>1933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Merion (East)</td>\n",
+       "      <td>Ardmore, PA</td>\n",
+       "      <td>Hugh Wilson</td>\n",
+       "      <td>1912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Fishers Island</td>\n",
+       "      <td>Fishers Island, NY</td>\n",
+       "      <td>Seth Raynor</td>\n",
+       "      <td>1926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Los Angeles (North)</td>\n",
+       "      <td>Los Angeles, CA</td>\n",
+       "      <td>George C. Thomas Jr.</td>\n",
+       "      <td>1927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Pebble Beach</td>\n",
+       "      <td>Pebble Beach, CA</td>\n",
+       "      <td>Jack Neville/Douglas Grant</td>\n",
+       "      <td>1919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Pinehurst (No</td>\n",
+       "      <td>Village of Pinehurst, NC</td>\n",
+       "      <td>Donald Ross</td>\n",
+       "      <td>1907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Chicago GC</td>\n",
+       "      <td>Wheaton, IL</td>\n",
+       "      <td>C.B. Macdonald, 1895/Seth Raynor, 1923</td>\n",
+       "      <td>1895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Riviera</td>\n",
+       "      <td>Pacific Palisades, CA</td>\n",
+       "      <td>George Thomas Jr./Billy Bell Sr.</td>\n",
+       "      <td>1927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Friar's Head</td>\n",
+       "      <td>Baiting Hollow, NY</td>\n",
+       "      <td>Bill Coore/Ben Crenshaw</td>\n",
+       "      <td>2003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16</td>\n",
+       "      <td>Winged Foot (West)</td>\n",
+       "      <td>Mamaroneck , NY</td>\n",
+       "      <td>A.W. Tillinghast</td>\n",
+       "      <td>1923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Pacific Dunes</td>\n",
+       "      <td>Bandon, OR</td>\n",
+       "      <td>Tom Doak</td>\n",
+       "      <td>2001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18</td>\n",
+       "      <td>Prairie Dunes</td>\n",
+       "      <td>Hutchinson, KS</td>\n",
+       "      <td>Perry Maxwell, 1937/Press Maxwell, 1957</td>\n",
+       "      <td>1937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Oakland Hills (South)</td>\n",
+       "      <td>Bloomfield Hills, MI</td>\n",
+       "      <td>Donald Ross</td>\n",
+       "      <td>1917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20</td>\n",
+       "      <td>Crystal Downs</td>\n",
+       "      <td>Frankfort, MI</td>\n",
+       "      <td>Alister MacKenzie/Perry Maxwell</td>\n",
+       "      <td>1932</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>21</td>\n",
+       "      <td>Seminole</td>\n",
+       "      <td>Juno Beach, FL</td>\n",
+       "      <td>Donald Ross</td>\n",
+       "      <td>1929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>22</td>\n",
+       "      <td>The Country Club (Clyde/Squirrel)</td>\n",
+       "      <td>Brookline, MA</td>\n",
+       "      <td>TCC Members/Willie Campbell</td>\n",
+       "      <td>1899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>23</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>San Francisco, CA</td>\n",
+       "      <td>A.W. Tillinghast</td>\n",
+       "      <td>1918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>24</td>\n",
+       "      <td>Southern Hills</td>\n",
+       "      <td>Tulsa, OK</td>\n",
+       "      <td>Perry Maxwell</td>\n",
+       "      <td>1936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Shoreacres</td>\n",
+       "      <td>Lake Bluff, IL</td>\n",
+       "      <td>Seth Raynor</td>\n",
+       "      <td>1921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>26</td>\n",
+       "      <td>Somerset Hills</td>\n",
+       "      <td>Bernardsville, NJ</td>\n",
+       "      <td>A.W. Tillinghast</td>\n",
+       "      <td>1918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>27</td>\n",
+       "      <td>California Golf Club of San Francisco</td>\n",
+       "      <td>South San Francisco, CA</td>\n",
+       "      <td>A.V. Macan, 1926/Alister MacKenzie, 1928/Kyle ...</td>\n",
+       "      <td>1926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Garden City</td>\n",
+       "      <td>Garden City, NY</td>\n",
+       "      <td>Devereux Emmet, 1899/Walter Travis, 1906</td>\n",
+       "      <td>1899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>29</td>\n",
+       "      <td>Maidstone</td>\n",
+       "      <td>East Hampton, NY</td>\n",
+       "      <td>John Park/Willie Park Jr.</td>\n",
+       "      <td>1922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>30</td>\n",
+       "      <td>Bethpage (Black)</td>\n",
+       "      <td>Farmingdale, NY</td>\n",
+       "      <td>A.W. Tillinghast</td>\n",
+       "      <td>1935</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   rank                                   name                  location  \\\n",
+       "0     1                            Pine Valley           Pine Valley, NJ   \n",
+       "1     2                          Cypress Point          Pebble Beach, CA   \n",
+       "2     3                       Shinnecock Hills           Southampton, NY   \n",
+       "3     4         National Golf Links of America           Southampton, NY   \n",
+       "4     5                                Oakmont               Oakmont, PA   \n",
+       "5     6                             Sand Hills                Mullen, NE   \n",
+       "6     7                       Augusta National               Augusta, GA   \n",
+       "7     8                          Merion (East)               Ardmore, PA   \n",
+       "8     9                         Fishers Island        Fishers Island, NY   \n",
+       "9    10                    Los Angeles (North)           Los Angeles, CA   \n",
+       "10   11                           Pebble Beach          Pebble Beach, CA   \n",
+       "11   12                          Pinehurst (No  Village of Pinehurst, NC   \n",
+       "12   13                             Chicago GC               Wheaton, IL   \n",
+       "13   14                                Riviera     Pacific Palisades, CA   \n",
+       "14   15                           Friar's Head        Baiting Hollow, NY   \n",
+       "15   16                     Winged Foot (West)           Mamaroneck , NY   \n",
+       "16   17                          Pacific Dunes                Bandon, OR   \n",
+       "17   18                          Prairie Dunes            Hutchinson, KS   \n",
+       "18   19                  Oakland Hills (South)      Bloomfield Hills, MI   \n",
+       "19   20                          Crystal Downs             Frankfort, MI   \n",
+       "20   21                               Seminole            Juno Beach, FL   \n",
+       "21   22      The Country Club (Clyde/Squirrel)             Brookline, MA   \n",
+       "22   23                          San Francisco         San Francisco, CA   \n",
+       "23   24                         Southern Hills                 Tulsa, OK   \n",
+       "24   25                             Shoreacres            Lake Bluff, IL   \n",
+       "25   26                         Somerset Hills         Bernardsville, NJ   \n",
+       "26   27  California Golf Club of San Francisco   South San Francisco, CA   \n",
+       "27   28                            Garden City           Garden City, NY   \n",
+       "28   29                              Maidstone          East Hampton, NY   \n",
+       "29   30                       Bethpage (Black)           Farmingdale, NY   \n",
+       "\n",
+       "                                            architect year_built  \n",
+       "0                        George Crump / Harry S. Colt       1918  \n",
+       "1                                   Alister MacKenzie       1928  \n",
+       "2                                       William Flynn       1931  \n",
+       "3                                      C.B. Macdonald       1911  \n",
+       "4                                        Henry Fownes       1903  \n",
+       "5                             Bill Coore/Ben Crenshaw       1995  \n",
+       "6                       Alister MacKenzie/Bobby Jones       1933  \n",
+       "7                                         Hugh Wilson       1912  \n",
+       "8                                         Seth Raynor       1926  \n",
+       "9                                George C. Thomas Jr.       1927  \n",
+       "10                         Jack Neville/Douglas Grant       1919  \n",
+       "11                                        Donald Ross       1907  \n",
+       "12             C.B. Macdonald, 1895/Seth Raynor, 1923       1895  \n",
+       "13                   George Thomas Jr./Billy Bell Sr.       1927  \n",
+       "14                            Bill Coore/Ben Crenshaw       2003  \n",
+       "15                                   A.W. Tillinghast       1923  \n",
+       "16                                           Tom Doak       2001  \n",
+       "17            Perry Maxwell, 1937/Press Maxwell, 1957       1937  \n",
+       "18                                        Donald Ross       1917  \n",
+       "19                    Alister MacKenzie/Perry Maxwell       1932  \n",
+       "20                                        Donald Ross       1929  \n",
+       "21                        TCC Members/Willie Campbell       1899  \n",
+       "22                                   A.W. Tillinghast       1918  \n",
+       "23                                      Perry Maxwell       1936  \n",
+       "24                                        Seth Raynor       1921  \n",
+       "25                                   A.W. Tillinghast       1918  \n",
+       "26  A.V. Macan, 1926/Alister MacKenzie, 1928/Kyle ...       1926  \n",
+       "27           Devereux Emmet, 1899/Walter Travis, 1906       1899  \n",
+       "28                          John Park/Willie Park Jr.       1922  \n",
+       "29                                   A.W. Tillinghast       1935  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
